[package]
edition = "2021"
name = "rust-actors-benches"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
criterion = "0.5"
kameo = "0.10"
ractor = {version = "0.11.1", default-features = false, features = ["tokio_runtime"]}
tokio = {version = "1", features = ["full"]}

[[bench]]
harness = false
name = "actix"
required-features = []

[[bench]]
harness = false
name = "ractor"
required-features = []

[[bench]]
harness = false
name = "kameo"
required-features = []
