[package]
name = "rust-actors-benches"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
criterion = "0.5.1"
kameo = "0.11.0"
ractor = {version = "0.11.1", default-features = false, features = ["tokio_runtime"]}
tokio = {version = "1.40.0", features = ["full"]}

[[bench]]
harness = false
name = "actix"
required-features = []

[[bench]]
harness = false
name = "ractor"
required-features = []

[[bench]]
harness = false
name = "kameo"
required-features = []
