[package]
edition = "2021"
name = "rust-actors-benches"
version = "0.4.0"

[dependencies]
actix = "0.13.5"
criterion = "0.5.1"
kameo = "0.14.0"
ractor = {version = "0.14.6", default-features = false, features = ["tokio_runtime"]}
tokio = {version = "1.43.0", features = ["full"]}

[[bench]]
harness = false
name = "actix"
required-features = []

[[bench]]
harness = false
name = "ractor"
required-features = []

[[bench]]
harness = false
name = "kameo"
required-features = []
